server/k8s/templates/gvisor-installer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gvisor-installer
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: gvisor-installer
  template:
    metadata:
      labels:
        name: gvisor-installer
    spec:
      hostPID: true
      restartPolicy: Always
      containers:
      - name: installer
        image: ubuntu:22.04
        securityContext:
          privileged: true
        volumeMounts:
        - name: host-bin
          mountPath: /host/usr/local/bin
        - name: host-conf
          mountPath: /host/etc/containerd
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
      volumes:
      - name: host-bin
        hostPath:
          path: /usr/local/bin
      - name: host-conf
        hostPath:
          path: /etc/containerd
