server/k8s/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "monitoring.devsarena.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kind-prometheus-grafana
            port:
               number: 80
